# dbterm

./: Cargo.toml  README.md  architecture.md
crates/widgets/: Cargo.toml
crates/widgets/src/: button.rs  lib.rs  picker.rs  popup.rs  radio.rs  status_line.rs
src/: app.rs  data.rs  errors.rs  events.rs  lib.rs  main.rs  popup.rs  render.rs  term.rs  theme.rs  widget.rs
src/screens/: connection.rs  main.rs  mod.rs
src/screens/connection/: connection_list.rs  new_connection_form.rs
